unpackaged/main/default/objects/Technical_Evaluation__c/Technical_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Technical Evaluation</label>
    <nameField>
        <label>Technical Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>