unpackaged/main/default/objects/Technical_Evaluation__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>