unpackaged/main/default/objects/Technical_Evaluation__c/fields/Blocker_Details__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Details__c</fullName>
    <inlineHelpText>Details on the blockers and any steps we’re pursuing to remediate (e.g. product agrees to build a new feature, aligning PS support, etc.), and links to any relevant linear tickets for features/bugs</inlineHelpText>
    <label>Blocker Details</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>