unpackaged/main/default/objects/Technical_Evaluation__c/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <inlineHelpText>What prevents the evaluation from proceeding?</inlineHelpText>
    <label>Blockers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product - Bug</fullName>
            </value>
            <value>
                <fullName>Product - Feature Request</fullName>
            </value>
            <value>
                <fullName>Pricing - Business to Enterprise</fullName>
            </value>
            <value>
                <fullName>Technical Resourcing</fullName>
            </value>
            <value>
                <fullName>Technical Competency</fullName>
            </value>
            <value>
                <fullName>Technical Feasibility</fullName>
            </value>
            <value>
                <fullName>Scope Creep</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>