unpackaged/main/default/objects/Technical_Evaluation__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Technical Evaluations</relationshipLabel>
    <relationshipName>Technical_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>