unpackaged/main/default/objects/Technical_Evaluation__c/fields/Create_Method__c.field-meta.xml
<CustomField>
    <fullName>Create_Method__c</fullName>
    <label>Create Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>