unpackaged/main/default/objects/Technical_Evaluation__c/fields/Deployment_Details__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Details__c</fullName>
    <inlineHelpText>Any relevant deployment configuration details (e.g. load balancing, custom certificates, air-gapped, IaC tools, etc.)  and links to any deployment diagrams/specs</inlineHelpText>
    <label>Deployment Details</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>