unpackaged/main/default/objects/Technical_Evaluation__c/fields/Deployment_POC__c.field-meta.xml
<CustomField>
    <fullName>Deployment_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary person responsible for deployment</inlineHelpText>
    <label>Deployment POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technical Evaluations</relationshipLabel>
    <relationshipName>Technical_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>