unpackaged/main/default/objects/Technical_Evaluation__c/fields/Deployment_Progress__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Progress__c</fullName>
    <inlineHelpText>How much of the deployment - including SSO/source control, externalized storage DB, and resource setup - is completed, which steps must be done post-sale, as well as if the customer is deploying differently in production than they did during the evaluation.</inlineHelpText>
    <label>Deployment Progress</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>