unpackaged/main/default/objects/Technical_Evaluation__c/fields/Discovery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Start_Date__c</fullName>
    <label>Discovery Start Date</label>
    <type>Date</type>
</CustomField>