unpackaged/main/default/objects/Technical_Evaluation__c/fields/Evaluation_Hosting_Styles__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Hosting_Styles__c</fullName>
    <label>Evaluation Hosting Styles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Type</valueSetName>
    </valueSet>
</CustomField>