unpackaged/main/default/objects/Technical_Evaluation__c/fields/Evaluation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Plan__c</fullName>
    <inlineHelpText>Link to the Google Doc which contains the customer-facing evaluation plan</inlineHelpText>
    <label>Evaluation Plan</label>
    <type>Url</type>
</CustomField>