unpackaged/main/default/objects/Technical_Evaluation__c/fields/Evaluation_Risks__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Risks__c</fullName>
    <inlineHelpText>Any identified deal risks (e.g. no executive alignment, limited urgency, APIs not yet built out, low skill builders, etc.)</inlineHelpText>
    <label>Evaluation Risks</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>