unpackaged/main/default/objects/Technical_Evaluation__c/fields/Evaluation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Summary__c</fullName>
    <inlineHelpText>A brief summary of the evaluation and any key deal highlights</inlineHelpText>
    <label>Evaluation Summary</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>