unpackaged/main/default/objects/Technical_Evaluation__c/fields/Evaluation_Types__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Types__c</fullName>
    <inlineHelpText>List any evaluation types leveraged. More information about each can be found in the Evaluation Playbook.</inlineHelpText>
    <label>Evaluation Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive Demo</fullName>
            </value>
            <value>
                <fullName>Custom Demo</fullName>
            </value>
            <value>
                <fullName>Low-Touch POC</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>High-Touch POC</fullName>
            </value>
            <value>
                <fullName>Self-led</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Architecture Design/Review</fullName>
            </value>
            <value>
                <fullName>Security Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>