unpackaged/main/default/objects/Technical_Evaluation__c/fields/Evaluation_Winner__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Winner__c</fullName>
    <inlineHelpText>If we lost the technical evaluation, what solution will be used instead?</inlineHelpText>
    <label>Evaluation Winner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>