unpackaged/main/default/objects/Technical_Evaluation__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <inlineHelpText>SE forecast for the opportunity; new = evaluation not started, on track = evaluation progressing as expected, at risk = evaluation progressing with concerns, blocked = evaluation cannot proceed, closed = evaluation complete</inlineHelpText>
    <label>Forecast</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SE_Forecast</valueSetName>
    </valueSet>
</CustomField>