unpackaged/main/default/objects/Technical_Evaluation__c/fields/Hosting_Provider_Details__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Provider_Details__c</fullName>
    <label>Hosting Provider Details</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>