unpackaged/main/default/objects/Technical_Evaluation__c/fields/I_Am_Owner__c.field-meta.xml
<CustomField>
    <fullName>I_Am_Owner__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I Am Owner?</label>
    <type>Checkbox</type>
</CustomField>