unpackaged/main/default/objects/Technical_Evaluation__c/fields/I_Am_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>I_Am_Owner_Manager__c</fullName>
    <formula>Owner:User.ManagerId=$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I Am Owner Manager?</label>
    <type>Checkbox</type>
</CustomField>