unpackaged/main/default/objects/Technical_Evaluation__c/fields/I_am_Sales_Engineering_Leadership__c.field-meta.xml
<CustomField>
    <fullName>I_am_Sales_Engineering_Leadership__c</fullName>
    <formula>ISPICKVAL($User.Team__c,&quot;Sales Engineering&quot;) &amp;&amp;
(
ISPICKVAL($User.Level__c,&quot;Lead&quot;) ||
ISPICKVAL($User.Level__c,&quot;Head&quot;) ||
ISPICKVAL($User.Level__c,&quot;Staff&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I Am Sales Engineering Leadership?</label>
    <type>Checkbox</type>
</CustomField>