unpackaged/main/default/objects/Technical_Evaluation__c/fields/Identified_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Identified_Use_Cases__c</fullName>
    <inlineHelpText>The use cases/apps the team is planning to roll out, and their priority, primary builders, teams, and end user details. Include links to relevant Gong calls or app specs/details.</inlineHelpText>
    <label>Identified Use Cases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>