unpackaged/main/default/objects/Technical_Evaluation__c/fields/Is_Lost__c.field-meta.xml
<CustomField>
    <fullName>Is_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lost?</label>
    <type>Checkbox</type>
</CustomField>