unpackaged/main/default/objects/Technical_Evaluation__c/fields/Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Details__c</fullName>
    <inlineHelpText>Additional context about why we lost the evaluation.</inlineHelpText>
    <label>Lost Reason Details</label>
    <type>TextArea</type>
</CustomField>