unpackaged/main/default/objects/Technical_Evaluation__c/fields/Manager_Forecast_Details__c.field-meta.xml
<CustomField>
    <fullName>Manager_Forecast_Details__c</fullName>
    <label>Manager Forecast Details</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>