unpackaged/main/default/objects/Technical_Evaluation__c/fields/Next_Meeting_Additional_Context__c.field-meta.xml
<CustomField>
    <fullName>Next_Meeting_Additional_Context__c</fullName>
    <label>Next Meeting Additional Context</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>