unpackaged/main/default/objects/Technical_Evaluation__c/fields/Next_Meeting_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Meeting_At__c</fullName>
    <label>Next Meeting At</label>
    <type>DateTime</type>
</CustomField>