unpackaged/main/default/objects/Technical_Evaluation__c/fields/Next_Meeting_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Next_Meeting_Attendees__c</fullName>
    <label>Next Meeting Attendees</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>