unpackaged/main/default/objects/Technical_Evaluation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Link to Google doc with running notes</inlineHelpText>
    <label>Notes</label>
    <type>Url</type>
</CustomField>