unpackaged/main/default/objects/Technical_Evaluation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Technical Evaluations</relationshipLabel>
    <relationshipName>Technical_Evaluations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>