unpackaged/main/default/objects/Technical_Evaluation__c/fields/Opportunity_Days_to_Renewal_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Days_to_Renewal_at_Create__c</fullName>
    <label>Opportunity Days to Renewal at Create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>