unpackaged/main/default/objects/Technical_Evaluation__c/fields/Opportunity_Forecast_Total_AR_at_Create__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Forecast_Total_AR_at_Create__c</fullName>
    <label>Opportunity Forecast Total AR at Create</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>