unpackaged/main/default/objects/Technical_Evaluation__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <label>Owner Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>