unpackaged/main/default/objects/Technical_Evaluation__c/fields/Owner_Level__c.field-meta.xml
<CustomField>
    <fullName>Owner_Level__c</fullName>
    <label>Owner Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>