unpackaged/main/default/objects/Technical_Evaluation__c/fields/Production_Hosting_Provider__c.field-meta.xml
<CustomField>
    <fullName>Production_Hosting_Provider__c</fullName>
    <inlineHelpText>On what infrastructure will their production environment be hosted?</inlineHelpText>
    <label>Production Hosting Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hosting_Providers</valueSetName>
    </valueSet>
</CustomField>