unpackaged/main/default/objects/Technical_Evaluation__c/fields/Production_Hosting_Style__c.field-meta.xml
<CustomField>
    <fullName>Production_Hosting_Style__c</fullName>
    <inlineHelpText>The hosting style the customer will ultimately use in production</inlineHelpText>
    <label>zOLD Production Hosting Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Type</valueSetName>
    </valueSet>
</CustomField>