unpackaged/main/default/objects/Technical_Evaluation__c/fields/Products_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Products_Evaluated__c</fullName>
    <inlineHelpText>List any products that are being actively evaluated</inlineHelpText>
    <label>Products/Solutions Evaluated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Plan Features</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>