unpackaged/main/default/objects/Technical_Evaluation__c/fields/Rejection_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Details__c</fullName>
    <label>Rejection Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>