unpackaged/main/default/objects/Technical_Evaluation__c/fields/Relevant_Linear_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Linear_Tickets__c</fullName>
    <inlineHelpText>Links to any relevant linear tickets for features/bugs the initial use cases are dependent on.</inlineHelpText>
    <label>Relevant Linear Tickets</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>