unpackaged/main/default/objects/Technical_Evaluation__c/fields/Request_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_Channel_ID__c</fullName>
    <formula>Request_MQ__r.Centro__ChannelId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request: Channel ID</label>
    <type>Text</type>
</CustomField>