unpackaged/main/default/objects/Technical_Evaluation__c/fields/Request_MQ__c.field-meta.xml
<CustomField>
    <fullName>Request_MQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request MQ</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>Technical Evaluations</relationshipLabel>
    <relationshipName>Technical_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>