unpackaged/main/default/objects/Technical_Evaluation__c/fields/Requested_By_Department__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Department__c</fullName>
    <label>Requested By Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>