unpackaged/main/default/objects/Technical_Evaluation__c/fields/Requested_By_Level__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Level__c</fullName>
    <label>Requested By Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>