unpackaged/main/default/objects/Technical_Evaluation__c/fields/Requested_By_Region__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Region__c</fullName>
    <label>Requested By Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Region</valueSetName>
    </valueSet>
</CustomField>