unpackaged/main/default/objects/Technical_Evaluation__c/fields/Requested_By_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Subteam__c</fullName>
    <label>Requested By Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>