unpackaged/main/default/objects/Technical_Evaluation__c/fields/Requested_By_Team__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Team__c</fullName>
    <label>Requested By Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>