unpackaged/main/default/objects/Technical_Evaluation__c/fields/Requested_By_Territory__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Territory__c</fullName>
    <label>Requested By Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>