unpackaged/main/default/objects/Technical_Evaluation__c/fields/Retool_Org__c.field-meta.xml
<CustomField>
    <fullName>Retool_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retool Org</label>
    <referenceTo>Retool_Org__c</referenceTo>
    <relationshipLabel>Technical Evaluations</relationshipLabel>
    <relationshipName>Technical_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>