unpackaged/main/default/objects/Technical_Evaluation__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <inlineHelpText>Any identified deal risks (e.g. no executive alignment, limited urgency, APIs not yet built out, low skill builders, etc.)</inlineHelpText>
    <label>Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>