unpackaged/main/default/objects/Technical_Evaluation__c/fields/Scoping_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scoping_Start_Date__c</fullName>
    <label>Scoping Start Date</label>
    <type>Date</type>
</CustomField>