unpackaged/main/default/objects/Technical_Evaluation__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <inlineHelpText>Low: Builders did not build in Retool and do not have technical proficiency to build on Retool 

Medium: Builders did not build in Retool but have the skillset to build in Retool (JS/SQL/APIs) or they have built in Retool but proficiency is still lacking (ex. not regularly using JS or need help with code gen)

High: Builders built in Retool pre-sale or from a previous job. They are familiar with building in Retool and are proficient in front-end building due to their role (SWE, Developer, etc)</inlineHelpText>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Builder_Skill_Level</valueSetName>
    </valueSet>
</CustomField>