unpackaged/main/default/objects/Technical_Evaluation__c/fields/Skill_Level_Details__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level_Details__c</fullName>
    <inlineHelpText>Context on the skill level of the people managing and building in Retool, (e.g. discrepancy in deployment vs. app building skill level or in different team skill level, where teams need help, etc.)</inlineHelpText>
    <label>Skill Level Details</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>