unpackaged/main/default/objects/Technical_Evaluation__c/fields/Source_Control_Details__c.field-meta.xml
<CustomField>
    <fullName>Source_Control_Details__c</fullName>
    <inlineHelpText>Details on source control setup (e.g. single vs. multi-instance, workflow requirements like number of branches or cherry-picking releases, Protected Resources requirement, idP not supported, etc.)</inlineHelpText>
    <label>Source Control Details</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>