unpackaged/main/default/objects/Technical_Evaluation__c/fields/Source_Control_Provider__c.field-meta.xml
<CustomField>
    <fullName>Source_Control_Provider__c</fullName>
    <inlineHelpText>What provider do they use for source control in production?</inlineHelpText>
    <label>Source Control Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Control_Providers</valueSetName>
    </valueSet>
</CustomField>