unpackaged/main/default/objects/Technical_Evaluation__c/fields/SSO_Protocol__c.field-meta.xml
<CustomField>
    <fullName>SSO_Protocol__c</fullName>
    <label>SSO Protocol</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSO_Protocols</valueSetName>
    </valueSet>
</CustomField>