unpackaged/main/default/objects/Technical_Evaluation__c/fields/Triaged_By__c.field-meta.xml
<CustomField>
    <fullName>Triaged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triaged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technical_Evaluations1</relationshipName>
    <type>Lookup</type>
</CustomField>