unpackaged/main/default/objects/Technical_Evaluation__c/fields/Use_Case_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Complexity__c</fullName>
    <inlineHelpText>Details on atypical complexity associated with the identified use cases (e.g. migration from an existing tool, complex workflow, APIs need to be built out, etc.)</inlineHelpText>
    <label>Use Case Complexity</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>