unpackaged/main/default/objects/Technical_Evaluation__c/fields/Use_Case_Progress__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Progress__c</fullName>
    <inlineHelpText>Indicate the work completed on the Identified Use Cases, and what was built by the customer vs. Retool.</inlineHelpText>
    <label>Use Case Progress</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>