unpackaged/main/default/objects/Technical_Evaluation__c/recordTypes/POC.recordType-meta.xml
<RecordType>
    <fullName>POC</fullName>
    <active>true</active>
    <label>POC</label>
</RecordType>