unpackaged/main/default/objects/Technical_Evaluation__c/recordTypes/Request.recordType-meta.xml
<RecordType>
    <fullName>Request</fullName>
    <active>true</active>
    <label>Request</label>
</RecordType>