unpackaged/main/default/objects/Technical_Evaluation__c/validationRules/Closed_No_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_No_Changes</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL($User.Team__c,&quot;Revenue Operations&quot;)) &amp;&amp;
(
  ISCHANGED(Close_Date__c) ||
  ISCHANGED(Evaluation_Start_Date__c) ||
  ISCHANGED(Scoping_Start_Date__c) ||
  ISCHANGED(OwnerId) ||
  ISCHANGED(Owner_Role__c) ||
  ISCHANGED(Owner_Department__c) ||
  ISCHANGED(Owner_Team__c) ||
  ISCHANGED(Owner_Subteam__c) ||
  ISCHANGED(Owner_Level__c) ||
  ISCHANGED(Owner_Territory__c) ||
  ISCHANGED(Owner_Segment__c)
) &amp;&amp;
PRIORVALUE(Is_Closed__c) &amp;&amp;
NOT(ISCHANGED(Permission_Check__c))</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Cannot change details of a closed technical evaluation</errorMessage>
</ValidationRule>