unpackaged/main/default/objects/Technical_Evaluation__c/validationRules/Discovery_before_scoping.validationRule-meta.xml
<ValidationRule>
    <fullName>Discovery_before_scoping</fullName>
    <active>true</active>
    <errorConditionFormula>Discovery_Start_Date__c &gt; Scoping_Start_Date__c</errorConditionFormula>
    <errorMessage>Discovery date must be before scoping date</errorMessage>
</ValidationRule>