unpackaged/main/default/objects/Technical_Evaluation__c/validationRules/In_Progress_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Progress_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Evaluation_Start_Date__c &gt; Close_Date__c &amp;&amp; NOT(ISCHANGED(Permission_Check__c))</errorConditionFormula>
    <errorMessage>Evaluation Start Date must be before Close Date</errorMessage>
</ValidationRule>