unpackaged/main/default/objects/Technical_Evaluation__c/validationRules/Invalid_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Close</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Close_Method__c) &amp;&amp;
NOT(ISCHANGED(Permission_Check__c)) &amp;&amp;
Is_Closed__c &amp;&amp;
ISCHANGED(Is_Closed__c)</errorConditionFormula>
    <errorMessage>You must use the Salesforce UI to close the technical evaluation</errorMessage>
</ValidationRule>